Nero collection literals (#115)
This pull request adds list, map, and set collection literals for use in rule heads and axioms. In addition, it revises and extends the Java `RuleEngine` test suite.

* Added `Term.toValue`.
* Added `ListTerm`, `MapTerm`, and `SetTerm` to `Term`.
* `RuleEngine` uses `Term.toValue` where appropriate.
* Added aggregation condition for collection literals to `Stratifier`
* Added `Context` enum to `NeroParser` for use when parsing terms of atoms.
* `NeroParser` parses collection literals in axioms and rule heads.
* Added collection literal output to `Nero::asNeroTerm`.
* `RuleEngineTest` maintenance, in preparation for adding collection literal
tests.  
* Fixed bug in `FactSet::getRelations` that causes an NPE in `Nero::asNeroScript`.
* Added `RuleEngineTest` tests for stratification errors.
* Improved the error message when a rule set cannot be stratified.
* Added `RuleEngineTest` tests for collection literals.
* Added `RuleEngineTest` tests for all constraint operators.